--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 	var box = document.getElementById("box")
 
 	btn.addEventListener("click", function () {
-		fetch("http://120.77.246.73:6666/api/v1.0/eatwhat/").then(res => {
+		fetch("https://39.108.79.110:5001/api/v1.0/eatwhat/").then(res => {
 		if (res.ok) {
 			return res.json()
 		}
